[patch.crates-io]
jsonrpc-core = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
jsonrpc-ws-server = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
jsonrpc-server-utils = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }

# The latest versions of thread_local (1.1.2) had a memory leak. This version doesn't have it.
thread_local = { git = "https://github.com/KalitaAlexey/thread_local-rs.git", branch = "patch-1.0.1" }

frame-benchmarking = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-benchmarking-cli = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-executive = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-support = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-system = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-system-benchmarking = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-system-rpc-runtime-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-aura = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-authorship = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-babe = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-balances = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-collective = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-democracy = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-elections-phragmen = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-grandpa = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-identity = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-im-online = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-membership = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-multisig = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-offences = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-randomness-collective-flip = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-scheduler = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-session = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-sudo = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-timestamp = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-transaction-payment = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-transaction-payment-rpc = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-utility = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-basic-authorship = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-chain-spec = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-cli = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-client-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus-aura = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus-babe = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus-slots = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-executor = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-finality-grandpa = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-informant = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-network = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-rpc = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-rpc-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-service = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-transaction-pool = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-arithmetic = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-block-builder = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-blockchain = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-consensus = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-consensus-aura = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-consensus-babe = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-core = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-finality-grandpa = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-inherents = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-io = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-keystore = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-offchain = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-runtime = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-runtime-interface = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-session = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-staking = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-std = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-storage = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-timestamp = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-transaction-pool = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-trie = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-version = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
substrate-frame-rpc-system =  { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
#parity-util-mem = { git = "https://github.com/paritytech/parity-common.git" }

#orml-currencies = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }
#orml-traits = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }
#orml-tokens = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }

#[patch."https://github.com/soramitsu/sora2-frame-pallets.git"]
#pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", rev = "345f82cccefb0282419d3f37867a126a00ec7d0b" }
#pallet-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", rev = "345f82cccefb0282419d3f37867a126a00ec7d0b" }

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-benchmarking-cli = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-executive = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-support = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-system = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-system-benchmarking = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
frame-system-rpc-runtime-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-aura = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-authorship = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-babe = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-balances = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-collective = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-democracy = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-elections-phragmen = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-grandpa = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-identity = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-im-online = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-membership = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-multisig = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-offences = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-randomness-collective-flip = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-scheduler = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-session = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-sudo = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-timestamp = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-transaction-payment = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-transaction-payment-rpc = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
pallet-utility = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-basic-authorship = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-chain-spec = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-cli = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-client-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus-aura = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus-babe = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-consensus-slots = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-executor = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-finality-grandpa = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-informant = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-network = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-rpc = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-rpc-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-service = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sc-transaction-pool = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-api = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-application-crypto = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-arithmetic = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-block-builder = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-blockchain = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-consensus = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-consensus-aura = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-consensus-babe = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-core = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-finality-grandpa = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-inherents = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-io = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-keystore = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-offchain = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-npos-elections = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-runtime = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-runtime-interface = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-session = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-staking = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-std = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-storage = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-timestamp = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-transaction-pool = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-trie = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
sp-version = { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }
substrate-frame-rpc-system =  { git = "https://github.com/kosrk/substrate.git", rev = "c96c435" }

[workspace]
members = [
    "runtime",
    "common",
    "pallets/assets",
    "pallets/permissions",
    "pallets/trading-pair",
    "pallets/dex-manager",
    "pallets/dex-api",
    "pallets/farming",
    "pallets/faucet",
    "pallets/iroha-migration",
    "pallets/liquidity-proxy",
    "pallets/mock-liquidity-source",
    "pallets/technical",
    "pallets/pool-xyk",
    "pallets/rewards",
    "pallets/xor-fee",
    "pallets/referral-system",
    "pallets/eth-bridge",
    "pallets/pswap-distribution",
    "pallets/multicollateral-bonding-curve-pool",
    "pallets/vested-rewards",
    "pallets/xst",
    "pallets/price-tools",
    "node/",
    "utils/parse",
]

resolver = "2"

[profile.release]
panic = 'unwind'
